# Cascada

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: compile-eas.yml  release.yml
ansible-setup/: galaxy-requirements.yml  install-mt4.yml
ea/ctrader/: CascadaBridge.cs
ea/ctrader/prebuilt/: CascadaBridge.algo  README.md
ea/mt4/: CascadaBridge.mq4
ea/mt4/compiled/: CascadaBridge.ex4  README.md
ea/mt5/: CascadaBridge.mq5
ea/mt5/compiled/: CascadaBridge.ex5
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: accounts.rs  ea_version.rs  install_ctrader.rs  install_mt.rs  mod.rs  quotes.rs  rules.rs  settings.rs  util.rs
src-tauri/src/connectors/: file_bridge.rs  mod.rs  mt_bridge.rs  proto.rs
src-tauri/src/core/: engine.rs  events.rs  mod.rs  model.rs  persistence.rs  state.rs  ticket_map.rs
src/components/: Accounts.svelte  Compare.svelte  Dashboard.svelte  Logs.svelte  Rules.svelte  Trades.svelte  UpdateBanner.svelte
src/lib/: VirtualList.svelte  api.ts  format.ts  updater.ts
